# webplats

./: LICENSE.md  README.md  dune-project  webplats.opam
lib/: dune
lib/model/: config.ml  config.mli  frontmatter.ml  frontmatter.mli  page.ml  page.mli  section.ml  section.mli  shortcode.ml  shortcode.mli  site.ml  site.mli  taxonomy.ml  taxonomy.mli
lib/util/: yamlutil.ml
lib/view/: dune  image.ml  index.eml.ml  photos.eml.ml  posts.eml.ml  render.ml  render.mli  renderer.eml.ml  router.ml  router.mli  rss.eml.ml  shortcodes.eml.ml  snapshots.eml.ml
src/: dune
src/model/: config.ml  config.mli  frontmatter.ml  frontmatter.mli  page.ml  page.mli  section.ml  section.mli  shortcode.ml  shortcode.mli  site.ml  site.mli  taxonomy.ml  taxonomy.mli
src/util/: http.ml  httphelper.ml  path.ml  yamlutil.ml
src/view/: dune  feed.ml  head.eml.ml  head.ml  image.ml  image.mli  render.ml  render.mli  router.ml  router.mli  rss.eml.ml  shortcodes.eml.ml  shortcodes.ml
test/: dune  test_find_shortcodes.ml  test_frontmatter.ml  test_http.ml  test_page.ml
