(lang dune 3.16)

(name webplats)

(generate_opam_files true)

(source
 (github mdales/webplats))

(authors "Michael Dales")

(maintainers "Michael Dales")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name webplats)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
