
(rule
 (targets shortcodes.ml)
 (deps shortcodes.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))

(rule
 (targets index.ml)
 (deps index.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))

(rule
 (targets photos.ml)
 (deps photos.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))

(rule
 (targets posts.ml)
 (deps posts.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))

(rule
 (targets snapshots.ml)
 (deps snapshots.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))

(rule
 (targets renderer.ml)
 (deps renderer.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))

(rule
 (targets rss.ml)
 (deps rss.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))